--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "pxl",
+  "name": "pixelworks",
   "version": "0.4.0",
   "description": "Utilities for working with ImageData in Workers",
   "main": "lib/index.js",
   "scripts": {
-    "start": "webpack --watch --debug --devtool source-map --output-pathinfo"
+    "start": "webpack"
   },
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/tschaub/pixelworks.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tschaub/pixelworks/issues"
+  },
+  "license": "MIT",
   "devDependencies": {
-    "node-libs-browser": "^0.5.2",
-    "webpack": "^1.9.10"
+    "webpack": "^1.9.12"
   }
 }
