Allow bracket notation

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "extends": "tschaub",
     "globals": {
       "ImageData": false
+    },
+    "rules": {
+      "dot-notation": 0
     }
   }
 }
