--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "pixelworks",
   "version": "1.1.0",
   "description": "Utilities for working with ImageData in Workers",
+  "keywords": [
+    "ImageData",
+    "worker",
+    "workers",
+    "canvas",
+    "pixels"
+  ],
   "main": "lib/index.js",
   "scripts": {
-    "pretest": "eslint lib test examples",
+    "lint": "eslint lib test examples",
+    "pretest": "npm run lint",
     "test": "karma start test/karma.conf.js --single-run",
-    "start": "karma start test/karma.conf.js",
-    "bundle": "mkdir -p dist && browserify lib/index.js --standalone pixelworks > dist/pixelworks.js",
-    "prepublish": "npm run bundle"
+    "start": "karma start test/karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -19,18 +25,18 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "browserify": "^14.1.0",
-    "chai": "^3.5.0",
-    "eslint": "^3.14.0",
-    "eslint-config-tschaub": "^6.0.0",
-    "karma": "^1.0.0",
-    "karma-browserify": "^5.0.2",
+    "browserify": "^16.0.0",
+    "chai": "^4.1.2",
+    "eslint": "^4.17.0",
+    "eslint-config-tschaub": "^9.0.0",
+    "karma": "^2.0.0",
+    "karma-browserify": "^5.2.0",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-mocha": "^1.0.1",
-    "karma-sauce-launcher": "^1.0.0",
-    "mocha": "^3.1.1",
-    "sinon": "^3.1.0",
-    "watchify": "^3.7.0"
+    "karma-mocha": "^1.3.0",
+    "karma-sauce-launcher": "^1.2.0",
+    "mocha": "^5.0.0",
+    "sinon": "^4.2.2",
+    "watchify": "^3.10.0"
   },
   "eslintConfig": {
     "extends": "tschaub",
