--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "eslint lib test examples",
     "pretest": "npm run lint",
     "test": "karma start test/karma.conf.js --single-run",
-    "start": "karma start test/karma.conf.js"
+    "start": "karma start test/karma.conf.js",
+    "build": "esbuild lib/index.js --bundle --minify --sourcemap --format=iife --global-name=pixelworks --outfile=dist/pixelworks.js"
   },
   "repository": {
     "type": "git",
@@ -25,18 +26,16 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "browserify": "^16.0.0",
-    "chai": "^4.1.2",
-    "eslint": "^4.17.0",
-    "eslint-config-tschaub": "^10.0.0",
-    "karma": "^2.0.0",
-    "karma-browserify": "^5.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-mocha": "^1.3.0",
-    "karma-sauce-launcher": "^1.2.0",
-    "mocha": "^7.0.1",
-    "sinon": "^5.0.0",
-    "watchify": "^3.10.0"
+    "chai": "^4.3.4",
+    "chai-spies": "^1.0.0",
+    "esbuild": "^0.12.15",
+    "eslint": "^7.30.0",
+    "eslint-config-tschaub": "^13.1.0",
+    "karma": "^6.3.4",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-esbuild": "^2.2.0",
+    "karma-mocha": "^2.0.1",
+    "mocha": "^9.0.2"
   },
   "eslintConfig": {
     "extends": "tschaub",
